[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-red-team"
version = "0.1.0"
description = "Adversarial test harness for RAG/agent APIs — checks whether guardrails actually hold up."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/red_team"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
